@@ -5,6 +5,7 @@ History:
 dev     2017/xx/xx
       - add the 'Say Thanks' button
       - doc: several fixes (fix #22)
+      - tests: a lot of tests added for better coverage
       - MSS: possibility to use custom class to handle screen shot data
       - Mac: handle screenshot's width not divisible by 16 (fix #14, #19, #21)
 
